--- a/server/views/listing.hbs
+++ b/server/views/listing.hbs
@@ -1,8 +1,8 @@
 <html>
 	    <head>
-	      <title>Node Text</title>
+	      <title>Definitely not airbnb</title>
 	      <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-	    </head>
+			</head>
 	    <body>
 	      <div class="navbar navbar-inverse navbar-fixed-top">
 	          <div class="container">
@@ -12,11 +12,9 @@
 	                <span class="icon-bar"></span>
 	                <span class="icon-bar"></span>
 	              </button>
-	              <a class="navbar-brand" href="https://speckyboy.com/">Node test</a>
 	            </div>
 	            <div class="collapse navbar-collapse">
 	              <ul class="nav navbar-nav">
-	                <li class="active"><a href="https://speckyboy.com/">Home</a></li>
 	              </ul>
 	            </div>
 	          </div>
@@ -27,7 +25,9 @@
 	          <div class="starter-template" style="padding-top: 50px;">
 	            <h1>Hello World</h1>
 	            <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-	          </div>
+              {{name}}
+
+						</div>
 
 	        </div>
 	    </body>
