--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,6 @@
+<head>
+  <link rel="stylesheet" type="text/css" href="css/styles.css" >
+</head>
 <h1>MakersBNB Listings:</h1>
 
 <a href="/listings/new">Post your own listing here</a>
