--- a/views/listing/new.hbs
+++ b/views/listing/new.hbs
@@ -1,3 +1,6 @@
+<head>
+  <link rel="stylesheet" type="text/css" href="css/styles.css" >
+</head>
 <h1>Create a Listing on MakersBNB:</h1>
 <form action="/listings/new" method="post">
   Title:
