--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,23 @@
 * {
-  color: red;
+  color: grey;
+}
+
+body {
+  background-image: url("/images/bull_moose.jpg");
+  background-size: 100% auto;
+  background-position-y: 20%;
+}
+
+
+h1 {
+  border: 2px solid;
+}
+
+#listings {
+  margin: auto;
+  border: 3px solid green;
+  width: 50%;
+  padding: 10px;
+  background-color: white;
+  opacity: 0.8;
 }
