--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,16 @@
 <head>
   <link rel="stylesheet" type="text/css" href="css/styles.css" >
 </head>
-<h1>MakersBNB Listings:</h1>
+<body>
+<div id="listings">
+  <h1>MakersBNB Listings:</h1>
+  <a href="/listings/new">Post your own listing here</a>
 
-<a href="/listings/new">Post your own listing here</a>
-
-{{#each listings}}
-  <p> 
-    <b>{{this.title}}:</b></br>
-    {{this.details}}
-  </p>
-{{/each}}
+  {{#each listings}}
+    <p>
+      <b>{{this.title}}:</b></br>
+      {{this.details}}
+    </p>
+  {{/each}}
+</div>
+</body>
