Resolve merge conflicts undetected by github

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,8 +15,9 @@
     {{#each listings}}
       <p>
 	<b>{{this.title}}:</b></br>
-	{{this.details}}
-      </p>
+	{{this.details}}</br>
+Location: {{this.location}}
+</p>
     {{/each}}
   </div>
 </body>
