--- a/views/listing/new.hbs
+++ b/views/listing/new.hbs
@@ -17,6 +17,9 @@
       Details:<br>
       <textarea name="details" cols="45" rows="3" ></textarea><br>
       <br>
+      Location:
+      <input type="text" name="location"/><br>
+      <br>
       <input type="submit" />
     </form>
   </div>
