--- a/views/listing/new.hbs
+++ b/views/listing/new.hbs
@@ -12,13 +12,13 @@
     <h1>Create a Listing on MakersBNB:</h1>
     <form action="/listings/new" method="post">
       Title:
-      <input type="text" name="title"/><br>
+      <input type="text" name="title" required/><br>
       <br>
       Details:<br>
-      <textarea name="details" cols="45" rows="3" ></textarea><br>
+      <textarea name="details" cols="45" rows="3" required></textarea><br>
       <br>
       Location:
-      <input type="text" name="location"/><br>
+      <input type="text" name="location" required/><br>
       <br>
       <input type="submit" />
     </form>
