Add form elements for booking a listing
(Functionality not implemented on back end)

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,8 +16,13 @@
       <p>
 	<b>{{this.title}}:</b></br>
 	{{this.details}}</br>
-Location: {{this.location}}
-</p>
+	Location: {{this.location}}</br>
+	<form method="post" action="/listings/book/{{this.id}}">
+	  <input name ="date" type="text">
+	  <input type="submit" value="Book Now">
+	</form>
+      </p>
     {{/each}}
+
   </div>
 </body>
