--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,5 @@
 <head>
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <link rel="stylesheet" type="text/css" href="/css/styles.css" >
 </head>
 <body>
@@ -18,6 +19,11 @@
 	{{this.details}}</br>
 Location: {{this.location}}
 </p>
+<form>
+  <input type="submit" value="Delete listing">
+</form>
     {{/each}}
+
+
   </div>
 </body>
