Website now stores a booking date

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,8 +17,9 @@
 	<b>{{this.title}}:</b></br>
 	{{this.details}}</br>
 	Location: {{this.location}}</br>
+
 	<form method="post" action="/listings/book/{{this.id}}">
-	  <input name ="date" type="text">
+	  <input name ="booking_date" type="text">
 	  <input type="submit" value="Book Now">
 	</form>
       </p>
