--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,12 +16,17 @@
       <p>
 	<b>{{this.title}}:</b></br>
 	{{this.details}}</br>
-	Location: {{this.location}}</br>
-
-	<form method="post" action="/listings/book/{{this.id}}">
-	  <input name ="booking_date" type="text">
-	  <input type="submit" value="Book Now">
-	</form>
+	Location: {{this.location}}
+	{{#if this.booking_date }}
+	  <br>
+	  This property is booked for {{this.booking_date}}.
+	{{else}}
+	  <form method="post" action="/listings/book/{{this.id}}">
+	    Format: yyyy-mm-dd<br>
+	    <input name ="booking_date" type="text" required pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))">
+	    <input type="submit" value="Book Now">
+	  </form>
+	{{/if}}
       </p>
     {{/each}}
 
