--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,7 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="/css/styles.css" >
+  <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
+
 <body>
   <header>
     <a href="#" class="header-link">A link</a>
@@ -14,16 +15,16 @@
 
     {{#each listings}}
       <p>
-	<b>{{this.title}}:</b></br>
-	{{this.details}}</br>
-Location: {{this.location}}
-</p>
-
-<div>
-<form action='/listing' method='post'>
-  <input type="submit" value="Delete listing">
-</form>
-</div
+        <b>{{this.title}}:</b></br>
+        {{this.details}}</br>
+        Location: {{this.location}}
+      </p>
+      <div>
+        <form action='listings/delete' method='post'>
+          <input type="hidden" name="id" value="{{this.id}}">
+          <input type="submit" value="Delete listing">
+        </form>
+      </div>
     {{/each}}
 
 
