Tidy up views; incorrect leap year in form no longer crashes app.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,14 +16,13 @@
       <p>
 	<b>{{this.title}}:</b></br>
 	{{this.details}}</br>
-	Location: {{this.location}}
+	Location: {{this.location}}<br>
 	{{#if this.booking_date }}
-	  <br>
 	  This property is booked for {{this.booking_date}}.
 	{{else}}
-	  <form method="post" action="/listings/book/{{this.id}}">
-	    Format: yyyy-mm-dd<br>
-	    <input name ="booking_date" type="text" required pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))">
+          Enter a date, format: yyyy-mm-dd
+          <form method="post" action="/listings/book/{{this.id}}">
+	    <input name ="booking_date" type="text" required pattern="(?:19|20)(?:(?:[13579][26]|[02468][048])-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))|(?:[0-9]{2}-(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-8])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:29|30))|(?:(?:0[13578]|1[02])-31)))">
 	    <input type="submit" value="Book Now">
 	  </form>
 	{{/if}}
