--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,10 +4,10 @@
 
 <body>
   <header>
-    <a href="#" class="header-link">A link</a>
-    <a href="#" class="header-link">Another link</a>
-    <a href="#" class="header-link">A third link</a>
-    <a href="#" class="header-link">A for-good-measure link</a>
+  <a href="https://en.wikipedia.org/wiki/Moose" class="header-link">Moose Facts</a>
+    <a href="https://www.poets.org/poetsorg/poem/moose" class="header-link">Moose Art</a>
+    <a href="http://www.theranchatrockcreek.com/accommodation/moose-house/" class="header-link">Moose Luxury</a>
+    <a href="https://en.wikipedia.org/wiki/House_mouse" class="header-link">Moose Rhymes</a>
   </header>
   <div class="main-content">
     <h1>MakersBNB Listings:</h1>
